// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Asteroid Dashboard Screen Find Asteroid Data User navigates Asteroid Dashboard 1`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ab8e00",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <KeyboardAwareScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardOpeningTime={250}
    viewIsInsideTabBar={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ab8e00",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#e8f4ff",
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 50,
            "textAlign": "center",
          }
        }
      >
        Search Asteroid Data
      </Text>
      <TextInput
        allowFontScaling={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="Enter Asteroid ID"
        placeholderTextColor="#ffffff"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#000000",
            "borderWidth": 2,
            "color": "#000000",
            "height": 50,
            "marginTop": 20,
            "paddingLeft": 20,
            "width": 300,
          }
        }
        testID="searchTextInputID"
        underlineColorAndroid="transparent"
        value=""
      />
      <ForwardRef
        disabled={true}
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "borderRadius": 15,
              "height": 50,
              "justifyContent": "center",
              "marginTop": 20,
              "width": 250,
            },
            Object {
              "backgroundColor": "#757575",
            },
          ]
        }
        testID="submitButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Submit
        </Text>
      </ForwardRef>
      <ForwardRef
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3000a8",
            "borderRadius": 15,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": 250,
          }
        }
        testID="randomButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Random Asteroid
        </Text>
      </ForwardRef>
    </View>
  </KeyboardAwareScrollView>
</ForwardRef(SafeAreaView)>
`;

exports[`Asteroid Dashboard Screen Find Asteroid Data User navigates Asteroid Dashboard 2`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ab8e00",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <KeyboardAwareScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardOpeningTime={250}
    viewIsInsideTabBar={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ab8e00",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#e8f4ff",
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 50,
            "textAlign": "center",
          }
        }
      >
        Search Asteroid Data
      </Text>
      <TextInput
        allowFontScaling={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="Enter Asteroid ID"
        placeholderTextColor="#ffffff"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#000000",
            "borderWidth": 2,
            "color": "#000000",
            "height": 50,
            "marginTop": 20,
            "paddingLeft": 20,
            "width": 300,
          }
        }
        testID="searchTextInputID"
        underlineColorAndroid="transparent"
        value="2000887"
      />
      <ForwardRef
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "borderRadius": 15,
              "height": 50,
              "justifyContent": "center",
              "marginTop": 20,
              "width": 250,
            },
            Object {
              "backgroundColor": "#00c92f",
            },
          ]
        }
        testID="submitButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Submit
        </Text>
      </ForwardRef>
      <ForwardRef
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3000a8",
            "borderRadius": 15,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": 250,
          }
        }
        testID="randomButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Random Asteroid
        </Text>
      </ForwardRef>
    </View>
  </KeyboardAwareScrollView>
</ForwardRef(SafeAreaView)>
`;

exports[`Asteroid Dashboard Screen Find Asteroid Data User navigates Asteroid Dashboard 3`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ab8e00",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <KeyboardAwareScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardOpeningTime={250}
    viewIsInsideTabBar={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ab8e00",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#e8f4ff",
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 50,
            "textAlign": "center",
          }
        }
      >
        Search Asteroid Data
      </Text>
      <TextInput
        allowFontScaling={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="Enter Asteroid ID"
        placeholderTextColor="#ffffff"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#000000",
            "borderWidth": 2,
            "color": "#000000",
            "height": 50,
            "marginTop": 20,
            "paddingLeft": 20,
            "width": 300,
          }
        }
        testID="searchTextInputID"
        underlineColorAndroid="transparent"
        value="2000887"
      />
      <ForwardRef
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "borderRadius": 15,
              "height": 50,
              "justifyContent": "center",
              "marginTop": 20,
              "width": 250,
            },
            Object {
              "backgroundColor": "#00c92f",
            },
          ]
        }
        testID="submitButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Submit
        </Text>
      </ForwardRef>
      <ForwardRef
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3000a8",
            "borderRadius": 15,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": 250,
          }
        }
        testID="randomButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Random Asteroid
        </Text>
      </ForwardRef>
    </View>
  </KeyboardAwareScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "position": "absolute",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</ForwardRef(SafeAreaView)>
`;

exports[`Asteroid Dashboard Screen Find Asteroid Data User navigates Asteroid Dashboard 4`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ab8e00",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <KeyboardAwareScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardOpeningTime={250}
    viewIsInsideTabBar={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ab8e00",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#e8f4ff",
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 50,
            "textAlign": "center",
          }
        }
      >
        Search Asteroid Data
      </Text>
      <TextInput
        allowFontScaling={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="Enter Asteroid ID"
        placeholderTextColor="#ffffff"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#000000",
            "borderWidth": 2,
            "color": "#000000",
            "height": 50,
            "marginTop": 20,
            "paddingLeft": 20,
            "width": 300,
          }
        }
        testID="searchTextInputID"
        underlineColorAndroid="transparent"
        value="2000887"
      />
      <ForwardRef
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "borderRadius": 15,
              "height": 50,
              "justifyContent": "center",
              "marginTop": 20,
              "width": 250,
            },
            Object {
              "backgroundColor": "#00c92f",
            },
          ]
        }
        testID="submitButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Submit
        </Text>
      </ForwardRef>
      <ForwardRef
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3000a8",
            "borderRadius": 15,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": 250,
          }
        }
        testID="randomButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Random Asteroid
        </Text>
      </ForwardRef>
    </View>
  </KeyboardAwareScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "position": "absolute",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</ForwardRef(SafeAreaView)>
`;

exports[`Asteroid Dashboard Screen Find Asteroid Data User navigates Asteroid Dashboard 5`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ab8e00",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <KeyboardAwareScrollView
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    enableAutomaticScroll={true}
    enableOnAndroid={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardOpeningTime={250}
    viewIsInsideTabBar={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ab8e00",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#e8f4ff",
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 50,
            "textAlign": "center",
          }
        }
      >
        Search Asteroid Data
      </Text>
      <TextInput
        allowFontScaling={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="Enter Asteroid ID"
        placeholderTextColor="#ffffff"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#000000",
            "borderWidth": 2,
            "color": "#000000",
            "height": 50,
            "marginTop": 20,
            "paddingLeft": 20,
            "width": 300,
          }
        }
        testID="searchTextInputID"
        underlineColorAndroid="transparent"
        value="2000887"
      />
      <ForwardRef
        disabled={false}
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "borderRadius": 15,
              "height": 50,
              "justifyContent": "center",
              "marginTop": 20,
              "width": 250,
            },
            Object {
              "backgroundColor": "#00c92f",
            },
          ]
        }
        testID="submitButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Submit
        </Text>
      </ForwardRef>
      <ForwardRef
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3000a8",
            "borderRadius": 15,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": 250,
          }
        }
        testID="randomButtonTestID"
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Random Asteroid
        </Text>
      </ForwardRef>
    </View>
  </KeyboardAwareScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "position": "absolute",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</ForwardRef(SafeAreaView)>
`;
